--- a/package.json
+++ b/package.json
@@ -12,22 +12,33 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@rn-primitives/portal": "^1.3.0",
+    "@rn-primitives/slot": "^1.2.0",
+    "@rn-primitives/types": "^1.2.0",
     "@supabase/supabase-js": "^2.90.1",
     "@thatopen/components": "^3.2.0",
     "@thatopen/components-front": "^3.2.0",
     "@thatopen/fragments": "^3.2.0",
     "@thatopen/ui": "^3.0.1",
     "@thatopen/ui-obc": "^3.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "expo": "~52.0.0",
     "expo-router": "~4.0.0",
     "expo-status-bar": "~2.0.0",
     "fast-xml-parser": "^5.3.3",
     "jsgantt-improved": "^2.8.10",
+    "lucide-react-native": "^0.562.0",
+    "nativewind": "^4.2.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-reanimated": "^4.2.1",
+    "react-native-svg": "^15.15.1",
     "react-native-web": "~0.19.13",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^3.3.2",
     "three": "^0.175.0",
     "uuid": "^13.0.0",
     "web-ifc": "^0.0.72"
