--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
     "react-native-reanimated": "^4.2.1",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-svg": "^15.15.1",
     "react-native-web": "~0.19.13",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.3.2",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.175.0",
     "uuid": "^13.0.0",
     "web-ifc": "^0.0.72"
